correct margins on grid to work on mobile and desktop

--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -36,17 +36,21 @@ $gutter-width: baselineGridUnits(1);
 
   & > * {
     @include grid-weight(4);
-    margin: 0 $gutter-width/2;
   }
 
   @include small-screen-up {
 
-      & > *:first-child {
-        margin-left: 0;    
-      }
+    & > * {
+      margin-left: $gutter-width/2;
+      margin-right: $gutter-width/2;
+    }
 
-      & > *:last-child {
-        margin-right: 0;    
-      }  
+    & > *:first-child {
+      margin-left: 0;    
+    }
+
+    & > *:last-child {
+      margin-right: 0;    
+    }  
   }
 }
